CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/cde_etncty__c.field-meta.xml
<CustomField>
    <fullName>cde_etncty__c</fullName>
    <description>cde_etncty</description>
    <externalDeveloperName>cde_etncty</externalDeveloperName>
    <label>Ethnicity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>