CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/cde_gender__c.field-meta.xml
<CustomField>
    <fullName>cde_gender__c</fullName>
    <description>cde_gender</description>
    <externalDeveloperName>cde_gender</externalDeveloperName>
    <label>Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>