CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/cde_level_grade_hghst__c.field-meta.xml
<CustomField>
    <fullName>cde_level_grade_hghst__c</fullName>
    <description>cde_level_grade_hghst</description>
    <externalDeveloperName>cde_level_grade_hghst</externalDeveloperName>
    <label>Highest Education Completed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>