CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/cde_race_1__c.field-meta.xml
<CustomField>
    <fullName>cde_race_1__c</fullName>
    <description>cde_race_1</description>
    <externalDeveloperName>cde_race_1</externalDeveloperName>
    <label>Race 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>