CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/cde_race_2__c.field-meta.xml
<CustomField>
    <fullName>cde_race_2__c</fullName>
    <description>cde_race_2</description>
    <externalDeveloperName>cde_race_2</externalDeveloperName>
    <label>Race 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>