CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/cde_rel_child__c.field-meta.xml
<CustomField>
    <fullName>cde_rel_child__c</fullName>
    <description>cde_rel_child</description>
    <externalDeveloperName>cde_rel_child</externalDeveloperName>
    <label>Relationship to Child</label>
    <length>3</length>
    <type>Text</type>
</CustomField>