CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/cde_source_vrfyd_citizen__c.field-meta.xml
<CustomField>
    <fullName>cde_source_vrfyd_citizen__c</fullName>
    <description>cde_source_vrfyd_citizen</description>
    <externalDeveloperName>cde_source_vrfyd_citizen</externalDeveloperName>
    <label>Citizenship verified source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>