CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/cde_source_vrfyd_dob__c.field-meta.xml
<CustomField>
    <fullName>cde_source_vrfyd_dob__c</fullName>
    <description>cde_source_vrfyd_dob</description>
    <externalDeveloperName>cde_source_vrfyd_dob</externalDeveloperName>
    <label>DOB verified source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>