CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/cde_status_mar__c.field-meta.xml
<CustomField>
    <fullName>cde_status_mar__c</fullName>
    <description>cde_status_mar</description>
    <externalDeveloperName>cde_status_mar</externalDeveloperName>
    <label>Marital Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>