CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/cde_suffix_name__c.field-meta.xml
<CustomField>
    <fullName>cde_suffix_name__c</fullName>
    <description>cde_suffix_name</description>
    <externalDeveloperName>cde_suffix_name</externalDeveloperName>
    <label>Name suffix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>