CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/cde_verif_ssn__c.field-meta.xml
<CustomField>
    <fullName>cde_verif_ssn__c</fullName>
    <description>cde_verif_ssn</description>
    <externalDeveloperName>cde_verif_ssn</externalDeveloperName>
    <label>SSN verification code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>