CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/cde_vrfyd_idnty__c.field-meta.xml
<CustomField>
    <fullName>cde_vrfyd_idnty__c</fullName>
    <description>cde_vrfyd_idnty</description>
    <externalDeveloperName>cde_vrfyd_idnty</externalDeveloperName>
    <label>Identity verification code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>