CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/dte_begin_out_house__c.field-meta.xml
<CustomField>
    <fullName>dte_begin_out_house__c</fullName>
    <description>dte_begin_out_house</description>
    <externalDeveloperName>dte_begin_out_house</externalDeveloperName>
    <label>House out begin date</label>
    <type>Date</type>
</CustomField>