CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/dte_verif_dob__c.field-meta.xml
<CustomField>
    <fullName>dte_verif_dob__c</fullName>
    <description>dte_verif_dob</description>
    <externalDeveloperName>dte_verif_dob</externalDeveloperName>
    <label>DOB verification date</label>
    <type>Date</type>
</CustomField>