CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/dte_verif_ssn__c.field-meta.xml
<CustomField>
    <fullName>dte_verif_ssn__c</fullName>
    <description>dte_verif_ssn</description>
    <externalDeveloperName>dte_verif_ssn</externalDeveloperName>
    <label>SSN verification date</label>
    <type>Date</type>
</CustomField>