CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/idn_case_vrfyng_ssn__c.field-meta.xml
<CustomField>
    <fullName>idn_case_vrfyng_ssn__c</fullName>
    <description>idn_case_vrfyng_ssn</description>
    <externalDeveloperName>idn_case_vrfyng_ssn</externalDeveloperName>
    <label>SSN verifying Case ID</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>