CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/idn_user_vrfyng_dob__c.field-meta.xml
<CustomField>
    <fullName>idn_user_vrfyng_dob__c</fullName>
    <description>idn_user_vrfyng_dob</description>
    <externalDeveloperName>idn_user_vrfyng_dob</externalDeveloperName>
    <label>User verifying DOB</label>
    <length>18</length>
    <type>Text</type>
</CustomField>