CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/ind_child_idea__c.field-meta.xml
<CustomField>
    <fullName>ind_child_idea__c</fullName>
    <description>ind_child_idea</description>
    <externalDeveloperName>ind_child_idea</externalDeveloperName>
    <label>Referred to Disabilities Education Act?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>