CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/ind_child_screen__c.field-meta.xml
<CustomField>
    <fullName>ind_child_screen__c</fullName>
    <description>ind_child_screen</description>
    <externalDeveloperName>ind_child_screen</externalDeveloperName>
    <label>Referred to Early &amp; Periodic Screening?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>