CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/ind_notify_sidmod__c.field-meta.xml
<CustomField>
    <fullName>ind_notify_sidmod__c</fullName>
    <description>ind_notify_sidmod</description>
    <externalDeveloperName>ind_notify_sidmod</externalDeveloperName>
    <label>Individual Cleared</label>
    <length>1</length>
    <type>Text</type>
</CustomField>