CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/ind_out_house__c.field-meta.xml
<CustomField>
    <fullName>ind_out_house__c</fullName>
    <description>ind_out_house</description>
    <externalDeveloperName>ind_out_house</externalDeveloperName>
    <label>Out of house indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>