CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/ind_train_curr__c.field-meta.xml
<CustomField>
    <fullName>ind_train_curr__c</fullName>
    <description>ind_train_curr</description>
    <externalDeveloperName>ind_train_curr</externalDeveloperName>
    <label>Current Training indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>