CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/nam_first__c.field-meta.xml
<CustomField>
    <fullName>nam_first__c</fullName>
    <description>nam_first</description>
    <externalDeveloperName>nam_first</externalDeveloperName>
    <label>First Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>