CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/nam_first_other__c.field-meta.xml
<CustomField>
    <fullName>nam_first_other__c</fullName>
    <description>nam_first_other</description>
    <externalDeveloperName>nam_first_other</externalDeveloperName>
    <label>Other First Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>