CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/nam_last__c.field-meta.xml
<CustomField>
    <fullName>nam_last__c</fullName>
    <description>nam_last</description>
    <externalDeveloperName>nam_last</externalDeveloperName>
    <label>Last Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>