CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/nam_mi__c.field-meta.xml
<CustomField>
    <fullName>nam_mi__c</fullName>
    <description>nam_mi</description>
    <externalDeveloperName>nam_mi</externalDeveloperName>
    <label>Middle Initial</label>
    <length>1</length>
    <type>Text</type>
</CustomField>