CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/nam_mi_other__c.field-meta.xml
<CustomField>
    <fullName>nam_mi_other__c</fullName>
    <description>nam_mi_other</description>
    <externalDeveloperName>nam_mi_other</externalDeveloperName>
    <label>Other Middle initial</label>
    <length>1</length>
    <type>Text</type>
</CustomField>