CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/nbr_ssn__c.field-meta.xml
<CustomField>
    <fullName>nbr_ssn__c</fullName>
    <description>nbr_ssn</description>
    <externalDeveloperName>nbr_ssn</externalDeveloperName>
    <label>Social Security Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>