CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_indiv_hist__x/fields/txt_sndx__c.field-meta.xml
<CustomField>
    <fullName>txt_sndx__c</fullName>
    <description>txt_sndx</description>
    <externalDeveloperName>txt_sndx</externalDeveloperName>
    <label>Soundex Text</label>
    <length>10</length>
    <type>Text</type>
</CustomField>